--- a/virtual/pyvenv.cfg
+++ b/virtual/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /home/moringa/Documents/moringa-school-projects/pitch-perfect/virtual/bin
+home = /usr/bin
 include-system-site-packages = false
 version = 3.6.7
